--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
     </div>
 
     <div class="up">
+        <!-- do not update  -->
         <a href="#home">
             <img src="./src/chevron-double-up.svg" width="30" alt="">
         </a>
